test/deploy-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ing
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
  - http:
      paths:
      - path: /hello1
        backend:
          serviceName: test-1-service
          servicePort: test-1
  - http:
      paths:
      - path: /hello2
        backend:
          serviceName: test-2-service
          servicePort: test-2
